# shoken-webapp-wasm

./: .env  .gitignore  404.html  Cargo.toml  Makefile  README.md  Trunk.toml  build.rs  index.html  shoken-webapp-wasm-13ce7d456cacec72.js  shoken-webapp-wasm-13ce7d456cacec72_bg.wasm  shoken-webapp-wasm-1697a816ce4e1912_bg.wasm  shoken-webapp-wasm-17c6c98fb81eec8f.js  shoken-webapp-wasm-17c6c98fb81eec8f_bg.wasm  shoken-webapp-wasm-19b19922ace24619.js  shoken-webapp-wasm-19b19922ace24619_bg.wasm  shoken-webapp-wasm-1a348e42322597e9.js  shoken-webapp-wasm-1a348e42322597e9_bg.wasm  shoken-webapp-wasm-1bb6d8339f78aa4d.js  shoken-webapp-wasm-1bb6d8339f78aa4d_bg.wasm  shoken-webapp-wasm-1bb94a14bcd54657.js  shoken-webapp-wasm-1bb94a14bcd54657_bg.wasm  shoken-webapp-wasm-28f698f51197a6e5.js  shoken-webapp-wasm-28f698f51197a6e5_bg.wasm  shoken-webapp-wasm-2960930d32bf469c.js  shoken-webapp-wasm-2960930d32bf469c_bg.wasm  shoken-webapp-wasm-2b211228a0d78f4b.js  shoken-webapp-wasm-2b211228a0d78f4b_bg.wasm  shoken-webapp-wasm-2f024b4361a8c02b.js  shoken-webapp-wasm-2f024b4361a8c02b_bg.wasm  shoken-webapp-wasm-3052722caf28e86d.js  shoken-webapp-wasm-3052722caf28e86d_bg.wasm  shoken-webapp-wasm-3b1242e02026e6c3.js  shoken-webapp-wasm-3b1242e02026e6c3_bg.wasm  shoken-webapp-wasm-40c372c2b145d923.js  shoken-webapp-wasm-40c372c2b145d923_bg.wasm  shoken-webapp-wasm-42fab86fe50befbc_bg.wasm  shoken-webapp-wasm-4d6f661b9046a829.js  shoken-webapp-wasm-4d6f661b9046a829_bg.wasm  shoken-webapp-wasm-53904adafeb8ff29.js  (+60 more)
.github/workflows/: deploy.yml
docs/: index.html
pkg/: package.json  shoken_webapp_wasm.d.ts  shoken_webapp_wasm.js  shoken_webapp_wasm_bg.wasm  shoken_webapp_wasm_bg.wasm.d.ts
src/: app.rs  data.rs  env.rs  lib.rs  pages.rs  routes.rs  services.rs  setting.rs
src/components/: layout.rs  mod.rs  use_info.rs
src/components/handlers/: mod.rs  oauth_google.rs
src/components/receipts/: common.rs  dividend_list.rs  domestic_stock.rs  lib.rs  mod.rs  mutual_fund.rs  profit_and_loss.rs  templete.rs
src/data/: use_info.rs
src/models/: stock.rs
src/pages/: home.rs  layout.rs  mod.rs  receipts.rs  search.rs
src/services/: api.rs  csv_reader.rs  formater.rs  oauth_google.rs  parser.rs  shoken_web_api.rs
(+4 files in other folders)
