[package]
name = "shoken-webapp-wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew関連
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yew-hooks = "0.3.2"

# WebAssembly関連
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }

# リクエスト/パース関連
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.89"
gloo-net = "0.6.0"
csv = "1.3.0"
encoding_rs = "0.8.35"
chrono = "0.4.38"
lazy_static = "1.5.0"

[build-dependencies]
# 環境変数
dotenv = "0.15.0"
