[package]
name = "shoken-webapp-wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew関連
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = "0.3.3"

# WebAssembly関連
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.47"
web-sys = { version = "0.3.76", features = ["HtmlInputElement"] }

# リクエスト/パース関連
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.94"
gloo-net = "0.6.0"
csv = "1.3.0"
encoding_rs = "0.8.35"
chrono = "0.4.38"
lazy_static = "1.5.0"
strum = { version = "0.26.3", features = ["derive"] }
dotenv = "0.15.0"

[build-dependencies]
# 環境変数
dotenv = "0.15.0"
