[package]
name = "shoken-webapp-wasm"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Yew関連
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
yew-hooks = "0.3.3"

# WebAssembly関連
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.47"
web-sys = { version = "0.3.76", features = ["HtmlInputElement"] }

# リクエスト/パース関連
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
gloo-net = "0.6.0"
csv = "1.3.0"
encoding_rs = "0.8.35"
chrono = "0.4.40"
lazy_static = "1.5.0"
strum = { version = "0.27.1", features = ["derive"] }
dotenv = "0.15.0"
url = "2.5.4"
gloo = "0.11.0"
oauth2 = "5.0.0"
thiserror = "2.0.12"
itertools = "0.14.0"

[build-dependencies]
# 環境変数
dotenv = "0.15.0"
